# pg-fc

./: Cargo.toml  Dockerfile  Dockerfile.pg18  README.md  build-rootfs.sh  init.sh  reclaim-disks.sh
.heyo/pg-vm-pool/: registry.tsv
deploy/supervisor/: heyvmd-healthcheck.sh  heyvmd.conf  pg-vm-pool.conf
docs/: plan-a-drive-swap.md
examples/: e2e.rs  e2e_concurrent.rs  sdk_restart.rs
src/: auth.rs  config.rs  dumpsrv.rs  main.rs  orphans.rs  proxy.rs  reclaim.rs  registry.rs  s3.rs  spares.rs  startup.rs  store.rs  tls.rs  vm.rs
src/dashboard/: alerts.rs  auth.rs  error.rs  handlers.rs  history.rs  host.rs  logs.rs  mod.rs  model.rs  router.rs  state.rs  sysinfo.rs  views.rs
