[package]
name = "pg-vm-pool"
version = "0.1.0"
edition = "2024"

[dependencies]
deadpool-postgres = "0.14.1"
tokio-postgres = "0.7"
# TEMP path dep: 0.1.3 panics on the daemon's `"urls":null` list response.
# Fix landed in sdk-rs 0.1.4 (null_to_default on SandboxInfo.urls). Revert to
# `heyo-sdk = "0.1.4"` once that version is published to crates.io.
heyo-sdk = { path = "../heyo/sdk-rs" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
