[package]
name = "pg-vm-pool"
version = "0.1.0"
edition = "2024"

[dependencies]
deadpool-postgres = "0.14.1"
tokio-postgres = "0.7"
heyo-sdk = "0.1.5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3.32"
# Client-facing TLS (SSLRequest upgrade). Both crates are already in the tree
# via heyo-sdk's reqwest stack with the `ring` provider — default features are
# off so we don't drag in the aws-lc-rs provider on top.
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rustls-pki-types = "1"
